--- a/_extensions/soles-assignment/soles-pdf.tex
+++ b/_extensions/soles-assignment/soles-pdf.tex
@@ -35,7 +35,7 @@
      % logo
     \AtPageLowerLeft{% start the bar at the bottom right of the page
         \put(\LenToUnit{\dimexpr\paperwidth-1.75cm},\paperheight-2.5cm){% move it to the top right
-            \color{primary}\includegraphics[width=1.5cm]{_extensions/soles-assignment/assets/images/usydlogo.png}
+            \color{primary}\includegraphics[width=1.5cm]{assets/usydlogo.png}
           }%
      }%
 }
